# virtual_test_engineer

./: LICENSE  README.md  SPECIFICATION.md  USER_GUIDE.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  sample_dut_profiles.yaml  spec.md  spec.tex  start.sh  test_api.py  test_arduino_firmata.py  test_client.py  test_core.py  test_flashing.py  test_integration.py  test_test_engine.py  white_paper.md
client/: README.md  __init__.py  config.json  config_manager.py  example_client.py  setup.py  vte_client.py
config/: channel_mappings.yml  channels.json  channels.json.bak  controls.yml  dut_limits.yml  hardware.yml  simulator_config.yml  system.json.bak  testbench.yaml  ui.json  ui.json.bak
core/: base_device.py  channel_manager.py  config_manager.py  device_manager.py  flash_manager.py  plugin_loader.py  stream_manager.py  system.py  test_engine.py
devices/: arduino_custom_firmware.ino  arduino_custom_firmware_driver.py  device_arduino.json  device_arduino_custom.json  device_custom_firmware.py  device_mock.py  device_mockdevice.json  device_sim_r4.py
docs/: api.md  design.md  review.md  spec.md  task.md
firmware/: test_firmware.hex
models/: config.py  test.py
routers/: channel.py  device.py  flash.py  mcp.py  system.py  test.py  ui.py
scratch/: test_flash_progress.py
specs/: 01_Architecture.md  02_DataModels.md  03_RestAPI.md  04_Examples.md  05_PluginInterface.md  06_ErrorHandling.md  white_paper.tex
src/: main.py
tests/: manual_test_arduino_firmata.py  test_async_blocking.py  test_core.py  test_flash_async.py  test_history.py  (+5 more)
(+16 files in other folders)
