[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "pymata4==1.15",
    "pyserial>=3.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.27",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]
